--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
         "psr-4": {
             "ProcessHelper\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4" : {
+            "ProcessHelper\\Tests\\": "tests/"
+        }
     }
 }
