--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "BSD-2-Clause",
     "require": {
-        "symfony/process": "^2.0 || ^3.0 || ^4.0"
+        "symfony/process": "^2.0 || ^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
